@@ -127,6 +127,9 @@ run_dump_test "tls-relax-ie-le-3"
 run_dump_test "tls-tiny-gd"
 run_dump_test "tls-tiny-gd-ie"
 run_dump_test "tls-tiny-gd-le"
+run_dump_test "tls-tiny-desc"
+run_dump_test "tls-tiny-desc-ie"
+run_dump_test "tls-tiny-desc-le"
 run_dump_test "tls-tiny-ie"
 run_dump_test "tlsle-symbol-offset"
 run_dump_test "gc-got-relocs"
